--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   w3m, or in firefox.
 	8. Implemented a "-into" option to embed mrxvt into. Thanks to Bruno
 	   Deferrari <utizoc@gmail.com> for the patch.
+	9. Fix buffer overflow. Thanks to Frederik Deweerdt <deweerdt@free.fr>
+	   for the patch.
 
     * Enhancements:
 	1. Reduced memory footprint by roughly 0.5kb.
